# Clariq

./: .gitignore  README.md
agent/: .gitignore  Dockerfile  requirements.txt
agent/src/: agent.py
backend/: .env.example  README.md  pyproject.toml  requirements.txt  test_phase_4_1.py  test_phase_4_2.py
backend/notebooks/: Build_your_own_Perplexity___Cerebras_and_Exa.ipynb  Sales_Agent___Cerebras_and_LiveKit.ipynb
backend/notebooks/context/: context.json
backend/src/: main.py
backend/src/agents/: __init__.py  sales_voice_agent.py
backend/src/api/: auth.py  research.py  voice.py
backend/src/core/: auth.py  config.py  security.py
backend/src/middleware/: auth.py  cors.py  security.py
backend/src/prompts/: __init__.py  research_prompts.py
backend/src/schemas/: responses.py  voice.py
backend/src/services/: __init__.py  appwrite_service.py  cerebras_service.py  exa_service.py  livekit_room_service.py  livekit_service.py  research_orchestrator.py  voice_interface.py  voice_url_service.py
backend/src/utils/: __init__.py  rate_limiting.py  report_formatter.py  transcript_processor.py
backend/src/workers/: __init__.py  research_worker.py  voice_agent_worker.py
client/: README.md  middleware.ts  next.config.ts  package-lock.json  package.json
client/app/: globals.css  layout.tsx  page.tsx
client/appwrite/: AuthProvider.tsx  auth.ts  config.ts
client/hooks/: useChatAndTranscription.ts  useDebug.ts
client/lib/: animation-variants.ts  api.ts  fonts.ts  research-enhanced.ts  toast.ts  useToast.ts  utils.ts
client/types/: user.ts
(+42 files in other folders)
