[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clariq-backend"
version = "0.1.0"
description = "CLARIQ FastAPI backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic-settings",
    "python-multipart",
    "appwrite",
]

[project.optional-dependencies]
dev = ["ruff", "pytest", "httpx"]

[tool.ruff]
select = ["E", "F", "I"]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
